--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,5 +10,6 @@
     "outDir": "dist",
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
